[header]: Complete create header component

--- a/src/components/banner/BannerComp.scss
+++ b/src/components/banner/BannerComp.scss
@@ -1,5 +1,7 @@
 .banner-comp {
   height: 100vh;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 
   img {
     width: 100% !important;
