--- a/src/components/banner/BannerComp.scss
+++ b/src/components/banner/BannerComp.scss
@@ -1,3 +1,5 @@
+@import "../../styles/rwd";
+
 .banner-comp {
   height: 100vh;
   padding-left: 0 !important;
@@ -7,5 +9,20 @@
     width: 100% !important;
     height: 100% !important;
     object-fit: cover;
+  }
+
+  &-container {
+    min-height: calc(100vh - 101px);
+
+    .mint-connected {
+      width: 60%;
+      @include mobile {
+        width: 100%;
+        .mint-box {
+          padding-left: 0 !important;
+          padding-right: 0 !important;
+        }
+      }
+    }
   }
 }
